--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,26 @@
-/* You can add global styles to this file, and also import other style files */
+@use "./styles/reset.scss";
+@use "./styles/position.scss";
+@use "./styles/firefly.scss";
+
+body {
+  background: url(https://i.pinimg.com/originals/44/6e/3b/446e3b79395a287ca32f7977dd83b290.jpg);
+  background-size: cover;
+  background-position: center;
+}
+
+.page {
+  height: 100%;
+}
+
+.slide {
+  min-width: 100%;
+  border: 3px solid aqua;
+  user-select: none;
+}
+
+.card {
+  background-color: yellow;
+  padding: 30px;
+  height: 400px;
+  margin: 10px auto;
+}
