feature: demon-slayer

--- a/src/styles/_position.scss
+++ b/src/styles/_position.scss
@@ -3,7 +3,13 @@
   place-content: center;
 }
 
-.f-col {
+.flex-center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.flex-col {
   display: flex;
   flex-direction: column;
 }
