--- a/src/app/components/flip-card/flip-card.component.scss
+++ b/src/app/components/flip-card/flip-card.component.scss
@@ -1,155 +1,72 @@
-$card-ratio: 55 / 85 !default;
-
-$card-width: 420px !default;
+$card-ratio: 45 / 85 !default;
+$card-width: 400px !default;
 $card-height: $card-width * $card-ratio !default;
+$gradient4: linear-gradient(
+  to right,
+  rgb(35, 37, 38, 0.4),
+  rgb(65, 67, 69, 0.4)
+);
 
-$corner-size: 12px !default;
-$icon-size: 80px !default;
-
-// Colours.
-// $colour-bg: #333 !default;
-$colour-bg: #302f34 !default;
-$colour-card-bg: #302f34 !default;
-$colour-gold: #d4cd96 !default;
-
-.card {
-  color: $colour-gold;
-  height: 100%;
-  transform-origin: 100% 50%;
-  transform-style: preserve-3d;
-  width: 100%;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  transition: transform 0.7s cubic-bezier(0.49, 0.23, 0.58, 0.49);
-  &.flipped {
-    transform: translateX(-100%) rotateY(-180deg);
-  }
-}
-.card-front,
-.card-back {
-  background: #302f348a;
-  box-shadow: 0 -1px 15px 0 rgb(118 119 141 / 20%);
-  backdrop-filter: blur(0.7px);
-
-  backface-visibility: hidden;
-  background: repeating-linear-gradient(
-    135deg,
-    rgba(darken($colour-card-bg, 50), 0.3),
-    transparent 1px,
-    rgba(darken($colour-card-bg, 50), 0.3) 2px
-  );
-  // box-shadow: 0px -6px 8px 0px rgba(#000, 0.1), 0px 6px 8px 0px rgba(#000, 0.1),
-  //   6px 0px 8px 0px rgba(#000, 0.1), -6px 0px 8px 0px rgba(#000, 0.1);
-  // background-color: $colour-card-bg;
-
-  background-size: 3px 3px;
-  border-radius: 1px;
-  cursor: pointer;
-  height: 100%;
-  padding: 5%;
-  width: 100%;
-}
-
-.card-back {
-  transform: rotateY(180deg);
-  .layer {
-    background: repeating-linear-gradient(
-      135deg,
-      rgba(darken($colour-gold, 50), 0.3),
-      transparent 1px,
-      rgba(darken($colour-gold, 50), 0.3) 2px
-    );
-    background-size: 3px 3px;
-    background-color: $colour-gold;
-    color: $colour-card-bg;
-    height: 100%;
-    position: relative;
-    width: 100%;
-    &:after {
-      background: linear-gradient(135deg, rgba(#000, 0.2), transparent);
-      content: "";
-      display: block;
-      height: 100%;
-      left: 0;
-      position: absolute;
-      top: 0;
-      width: 100%;
-    }
-
-    .top,
-    .bottom {
-      left: 8%;
-      position: absolute;
-      z-index: 1;
-    }
-
-    .top {
-      top: 12%;
-    }
-    .bottom {
-      bottom: 12%;
-    }
-  }
-}
-
-.card-front {
-  .layer {
-    backface-visibility: hidden;
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    justify-content: center;
-    position: relative;
-    width: 100%;
-
-    h1 {
-      font-size: 32px;
-      font-weight: 400;
-      letter-spacing: -2px;
-      margin: 0 auto;
-      padding: 6px 18px 4px;
-      text-align: center;
-    }
-
-    .corner {
-      backface-visibility: hidden;
-      border-right: 2px solid $colour-gold;
-      border-top: 2px solid $colour-gold;
-      height: $corner-size;
-      position: absolute;
-      width: $corner-size;
-
-      &:nth-of-type(1) {
-        right: 0;
-        top: 0;
-      }
-
-      &:nth-of-type(2) {
-        left: 0;
-        top: 0;
-        transform: rotateZ(-90deg);
-      }
-
-      &:nth-of-type(3) {
-        bottom: 0;
-        left: 0;
-        transform: rotateZ(180deg);
-      }
-
-      &:nth-of-type(4) {
-        bottom: 0;
-        right: 0;
-        transform: rotateZ(90deg);
-      }
-    }
-  }
-}
+$gradient9: linear-gradient(
+  to right,
+  rgb(35, 37, 38, 0.9),
+  rgb(65, 67, 69, 0.9)
+);
+$opacity: 0.9;
+$br: 20px;
+$txt-color: white !default;
 
 .card-wrapper {
   height: $card-height;
   max-width: $card-width;
-  margin: 25px auto;
+  margin: 20px auto;
   perspective: 600px;
   position: relative;
   width: 100%;
   transition: transform 1s;
+  .card {
+    color: $txt-color;
+    height: 100%;
+    width: 100%;
+    transform-origin: 100% 50%;
+    transform-style: preserve-3d;
+    transition: transform 0.7s cubic-bezier(0.49, 0.23, 0.58, 0.49);
+    &.flipped {
+      transform: translateX(-100%) rotateY(-180deg);
+    }
+  }
+  .card-front,
+  .card-back {
+    box-shadow: 0 -1px 15px 0 rgb(0 0 0 / 20%);
+    backface-visibility: hidden;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    opacity: $opacity;
+    border-radius: $br;
+    cursor: pointer;
+    height: 100%;
+    width: 100%;
+    .layer {
+      height: 100%;
+      width: 100%;
+      position: relative;
+      border-radius: $br;
+    }
+  }
+
+  .card-front {
+    .layer {
+      background: $gradient4;
+      backface-visibility: hidden;
+    }
+  }
+  .card-back {
+    transform: rotateY(180deg);
+    .layer {
+      background: $gradient9;
+      text-align: center;
+      padding: 10px;
+    }
+  }
 }
